# figscrape

./: README.md  figscrape-cli.py  main.py  pyproject.toml  sandbox.py
scrapers/: __init__.py  item.py  scraper.py  tsubaki.py
