[tool.poetry]
name = "figscrape"
version = "0.1.0"
description = "An scraper for action figure prices in Europe"
authors = ["Daniel Sader <danielpontello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
